--- a/src/scss/layout/_loader.scss
+++ b/src/scss/layout/_loader.scss
@@ -2,7 +2,7 @@
 @use "../utils/mixins" as *;
 @use "../utils/variables" as *;
 
-.loader {
+.loading-screen {
   position: fixed;
   top: 0;
   left: 0;
@@ -15,48 +15,69 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  animation: loadingScreen 4s linear forwards;
+  animation: loadingScreen 3s linear forwards;
 
   @keyframes loadingScreen {
     94% {
       opacity: 1;
     }
-    99% {
+    99.99% {
       opacity: 0;
-      height: 100vh;
+      transform: translateX(0);
     }
     100% {
-      height: 0;
+      opacity: 0;
+      transform: translateX(100%);
+    }
+  }
+}
+
+.loader {
+  position: relative;
+  width: 50px;
+  height: 50px;
+  animation: wholeSpin 3s linear infinite;
+
+  @keyframes wholeSpin {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
     }
   }
 
   &__circle {
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    margin: 0 3px;
-    animation: scaling 2s ease-in-out infinite;
+    &-bg {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      border-radius: 50px;
 
-    @for $i from 1 through 3 {
+      border: 7px solid $color-medium-gray;
+      z-index: -1;
+    }
+
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 50px;
+
+    border: 7px solid transparent;
+    border-bottom: 7px solid $color-primary;
+
+    @for $i from 2 through 5 {
       &:nth-child(#{$i}n) {
-        animation-delay: #{$i * 0.15}s;
+        animation: spin 1s ease-in-out infinite #{$i * 0.14}s;
       }
     }
 
-    @keyframes scaling {
-      0%,
+    @keyframes spin {
+      0% {
+        transform: rotate(0);
+      }
       100% {
-        transform: scale(0.2);
-        background: $color-primary;
-      }
-      30%,
-      70% {
-        transform: scale(1);
-        background: $color-secondary;
-      }
-      35%,
-      55% {
-        background: $color-tertiary;
+        transform: rotate(360deg);
       }
     }
   }
