--- a/css/main.css
+++ b/css/main.css
@@ -238,7 +238,6 @@ footer > * {
   left: -12px;
 }
 .usage i {
-  /* color: $color-gray; */
   margin-right: 20px;
 }
 .usage__card-text {
@@ -246,6 +245,7 @@ footer > * {
   color: #353535;
 }
 
+/* restaurant cards */
 @media screen and (min-width: 768px) {
   .restaurants__cards {
     display: grid;
@@ -287,6 +287,18 @@ footer > * {
   margin-bottom: 5px;
 }
 .restaurants__card-label {
+  position: absolute;
+  right: 12px;
+  top: 12px;
+  padding: 10px;
+  border-radius: 3px;
+  line-height: 0.7;
+  font-weight: 500;
+  color: #128667;
+  background: #99e2d0;
+}
+.restaurants__card--new::after {
+  content: "Nouveau";
   position: absolute;
   right: 12px;
   top: 12px;
@@ -462,7 +474,7 @@ footer > * {
   background: linear-gradient(0deg, #ff79da 0%, #9356dc 100%);
   background-clip: text;
   -webkit-background-clip: text;
-  animation: fade 1s forwards;
+  animation: fade 0.6s forwards;
 }
 @keyframes fade {
   from {
@@ -481,7 +493,7 @@ footer > * {
   }
 }
 .heart-btn i:hover::after {
-  animation: circle 1s ease-out forwards;
+  animation: circle 0.6s ease-out forwards;
 }
 @keyframes circle {
   0% {
