--- a/src/scss/pages/_accueil.scss
+++ b/src/scss/pages/_accueil.scss
@@ -10,6 +10,7 @@
 
   &__text {
     font-weight: 500;
+    font-size: $size-location-text;
     color: $color-dark-gray;
     line-height: 1;
     margin: 20px 0;
