--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -30,6 +30,7 @@ $gradient-heart: linear-gradient(
 
 /* font sizes */
 $size-main-title: 1.5rem;
+$size-location-text: 1rem;
 $size-card-title: 1.05rem;
 $size-card-text: 1rem;
 $size-footer-text: 0.95rem;
