folders reorganized + images fix + html indent

--- a/src/scss/pages/_menu.scss
+++ b/src/scss/pages/_menu.scss
@@ -8,6 +8,10 @@
   z-index: -1;
 }
 
+#img-note-enchantee {
+  object-position: center;
+}
+
 .menu {
   background: $color-medium-gray;
   padding-top: 40px;
