--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,7 @@ img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  object-position: center;
+  object-position: bottom;
 }
 
 main {
@@ -309,6 +309,9 @@ footer > * {
   font-weight: 500;
   color: #128667;
   background: #99e2d0;
+}
+.restaurants__card:nth-child(2) img {
+  object-position: 50% 60%;
 }
 .restaurants__card-heart {
   position: absolute;
@@ -591,6 +594,10 @@ footer > * {
   height: 260px;
   position: relative;
   z-index: -1;
+}
+
+#img-note-enchantee {
+  object-position: center;
 }
 
 .menu {
