--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -137,6 +137,10 @@
       }
     }
 
+    &:nth-child(2) img {
+      object-position: 50% 60%;
+    }
+
     &-heart {
       position: absolute;
       right: 25px;
